--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
     </style>
 </head>
 <body>
-    <script src="/three.js-master"></script>
+    <!-- Include Three.js -->
+    <script src="three.js-master/build/three.min.js"></script>
+    <!-- Include GLTFLoader -->
     <script src="https://cdn.jsdelivr.net/npm/three@0.134.0/examples/js/loaders/GLTFLoader.js"></script>
+    <!-- Include OrbitControls -->
+    <script src="https://cdn.jsdelivr.net/npm/three@0.134.0/examples/js/controls/OrbitControls.js"></script>
     <script>
         // Create the scene
         const scene = new THREE.Scene();
@@ -31,7 +35,7 @@
 
         // Load the 3D model
         const loader = new THREE.GLTFLoader();
-        loader.load('/model/Incom_Logo08.gltf', function (gltf) {
+        loader.load('model/Incom_Logo08.gltf', function (gltf) {
             scene.add(gltf.scene);
             animate();
         }, undefined, function (error) {
