--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
 </head>
 <body>
     <!-- Include Three.js -->
-    <script src="three.js-master/build/three.module.min.js"></script>
-    <!-- Include GLTFLoader -->
-    <script src="https://cdn.jsdelivr.net/npm/three@0.134.0/examples/js/loaders/GLTFLoader.js"></script>
-    <!-- Include OrbitControls -->
-    <script src="https://cdn.jsdelivr.net/npm/three@0.134.0/examples/js/controls/OrbitControls.js"></script>
-    <script>
+    <script type="module">
+        import * as THREE from './three.js-master/build/three.module.js';
+        window.THREE = THREE;
+
+        // Include GLTFLoader and OrbitControls
+        import { GLTFLoader } from './three.js-master/examples/jsm/loaders/GLTFLoader.js';
+        import { OrbitControls } from './three.js-master/examples/jsm/controls/OrbitControls.js';
+
         // Create the scene
         const scene = new THREE.Scene();
 
@@ -40,7 +42,7 @@
         scene.add(cube);
 
         // Load the 3D model
-        const loader = new THREE.GLTFLoader();
+        const loader = new GLTFLoader();
         loader.load('model/Incom_Logo08.gltf', function (gltf) {
             scene.add(gltf.scene);
             animate();
@@ -49,7 +51,7 @@
         });
 
         // Add controls to rotate the model
-        const controls = new THREE.OrbitControls(camera, renderer.domElement);
+        const controls = new OrbitControls(camera, renderer.domElement);
 
         // Animation loop
         function animate() {
