--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 </head>
 <body>
     <script type="module">
-        import * as THREE from '/three.js-master/build/three.module.js';
+        import * as THREE from 'three.js-master/build/three.module.js';
 
         // Include GLTFLoader and OrbitControls
-        import { GLTFLoader } from '/three.js-master/examples/jsm/loaders/GLTFLoader.js';
-        import { OrbitControls } from '/three.js-master/examples/jsm/controls/OrbitControls.js';
+        import { GLTFLoader } from 'three.js-master/examples/jsm/loaders/GLTFLoader.js';
+        import { OrbitControls } from 'three.js-master/examples/jsm/controls/OrbitControls.js';
 
         // Create the scene
         const scene = new THREE.Scene();
