--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
 </head>
 <body>
     <script type="module">
-        import * as THREE from 'three.js-master/build/three.module.js';
-
-        // Include GLTFLoader and OrbitControls
-        import { GLTFLoader } from 'three.js-master/examples/jsm/loaders/GLTFLoader.js';
-        import { OrbitControls } from 'three.js-master/examples/jsm/controls/OrbitControls.js';
+        import * as THREE from './three.js-master/build/three.module.js';
+        import { GLTFLoader } from './three.js-master/examples/jsm/loaders/GLTFLoader.js';
+        import { OrbitControls } from './three.js-master/examples/jsm/controls/OrbitControls.js';
 
         // Create the scene
         const scene = new THREE.Scene();
@@ -41,7 +39,7 @@
 
         // Load the 3D model
         const loader = new GLTFLoader();
-        loader.load('model/Incom_Logo08.gltf', function (gltf) {
+        loader.load('./model/Incom_Logo08.gltf', function (gltf) {
             scene.add(gltf.scene);
             animate();
         }, undefined, function (error) {
