--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
     </style>
 </head>
 <body>
-    <script type="module">
-        import * as THREE from './three.js-master/build/three.module.js';
-        import { GLTFLoader } from './three.js-master/examples/jsm/loaders/GLTFLoader.js';
-        import { OrbitControls } from './three.js-master/examples/jsm/controls/OrbitControls.js';
-
+    <!-- Include Three.js -->
+    <script src="three.js-master/build/three.min.js"></script>
+    <!-- Include GLTFLoader -->
+    <script src="https://cdn.jsdelivr.net/npm/three@0.134.0/examples/js/loaders/GLTFLoader.js"></script>
+    <!-- Include OrbitControls -->
+    <script src="https://cdn.jsdelivr.net/npm/three@0.134.0/examples/js/controls/OrbitControls.js"></script>
+    <script>
         // Create the scene
         const scene = new THREE.Scene();
 
@@ -38,8 +40,8 @@
         scene.add(cube);
 
         // Load the 3D model
-        const loader = new GLTFLoader();
-        loader.load('./model/Incom_Logo08.gltf', function (gltf) {
+        const loader = new THREE.GLTFLoader();
+        loader.load('model/Incom_Logo08.gltf', function (gltf) {
             scene.add(gltf.scene);
             animate();
         }, undefined, function (error) {
@@ -47,7 +49,7 @@
         });
 
         // Add controls to rotate the model
-        const controls = new OrbitControls(camera, renderer.domElement);
+        const controls = new THREE.OrbitControls(camera, renderer.domElement);
 
         // Animation loop
         function animate() {
