--- a/index.html
+++ b/index.html
@@ -24,20 +24,22 @@
         const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
         camera.position.z = 5;
 
-        // Set up the renderer
-        const renderer = new THREE.WebGLRenderer();
+        // Set up the renderer with anti-aliasing
+        const renderer = new THREE.WebGLRenderer({ antialias: true });
         renderer.setSize(window.innerWidth, window.innerHeight);
         document.body.appendChild(renderer.domElement);
 
-        // Add a light
-        const light = new THREE.AmbientLight(0x404040); // soft white light
-        scene.add(light);
+        // Add lights for even lighting
+        const ambientLight = new THREE.AmbientLight(0x404040); // soft white light
+        scene.add(ambientLight);
 
-        // Add a simple cube for debugging
-        const geometry = new THREE.BoxGeometry();
-        const material = new THREE.MeshBasicMaterial({ color: 0x00ff00 });
-        const cube = new THREE.Mesh(geometry, material);
-        scene.add(cube);
+        const directionalLight1 = new THREE.DirectionalLight(0xffffff, 1);
+        directionalLight1.position.set(1, 1, 1).normalize();
+        scene.add(directionalLight1);
+
+        const directionalLight2 = new THREE.DirectionalLight(0xffffff, 1);
+        directionalLight2.position.set(-1, -1, -1).normalize();
+        scene.add(directionalLight2);
 
         // Load the 3D model
         const loader = new THREE.GLTFLoader();
