--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                 pmremGenerator.dispose();
             });
 
+        // Load the 3D model
         const loader = new THREE.GLTFLoader();
         loader.load('model/Incom_Logo026.gltf', function (gltf) {
             gltf.scene.traverse((node) => {
@@ -69,13 +70,10 @@
         // Add controls to rotate the model
         const controls = new THREE.OrbitControls(camera, renderer.domElement);
 
-       
-
         // Animation loop
         function animate() {
             requestAnimationFrame(animate);
             controls.update();
-            
             renderer.render(scene, camera);
         }
 
