--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         scene.background = new THREE.Color(0x808080); // gray background
 
         // Set up the camera
-        const camera = new THREE.PerspectiveCamera(85, window.innerWidth / window.innerHeight, 0.1, 1000);
+        const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
         camera.position.z = 5;
 
         // Set up the renderer with anti-aliasing
@@ -52,25 +52,13 @@
                 pmremGenerator.dispose();
             });
 
-        // Function to lighten colors
-        function lightenColor(color, intensity) {
-            const white = new THREE.Color(0xffffff);
-            return color.lerp(white, intensity);
-        }
-
         // Load the 3D model
         const loader = new THREE.GLTFLoader();
-        loader.load('model/Incom_Logo026.gltf', function (gltf) {
+        loader.load('model/Incom_Logo027.gltf', function (gltf) {
             gltf.scene.traverse((node) => {
                 if (node.isMesh) {
-                    // Lighten the material color
-                    const originalColor = new THREE.Color(node.material.color);
-                    const lightenedColor = lightenColor(originalColor, 0.5); // Adjust intensity to lighten color
-                    const flatMaterial = new THREE.MeshBasicMaterial({
-                        color: lightenedColor,
-                        flatShading: true
-                    });
-                    node.material = flatMaterial;
+                    node.material.flatShading = true;
+                    node.material.needsUpdate = true;
                 }
             });
             scene.add(gltf.scene);
