--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 
         // Load the 3D model
         const loader = new THREE.GLTFLoader();
-        loader.load('model/Incom_Logo035.gltf', function (gltf) {
-            // Rotate the model on the Z axis by 180 degrees
-            gltf.scene.rotation.z = Math.PI; // 180 degrees in radians
+        loader.load('model/Incom_Logo034.gltf', function (gltf) {
+            // Rotate the model on the Y axis by 180 degrees
+            gltf.scene.rotation.y = Math.PI; // 180 degrees in radians
             scene.add(gltf.scene);
             animate();
         }, undefined, function (error) {
