--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 
         // Set up the camera
         const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-        camera.position.z = 5;
+        // Initial camera position
+        camera.position.set(3.5, 1.5,0.5);
 
         // Set up the renderer with anti-aliasing
         const renderer = new THREE.WebGLRenderer({ antialias: true });
@@ -54,10 +55,14 @@
 
         // Load the 3D model
         const loader = new THREE.GLTFLoader();
-        loader.load('model/Incom_Logo036.gltf', function (gltf) {
+        loader.load('model/Incom_Logo039.gltf', function (gltf) {
             // Rotate the model on the Y axis by 180 degrees
             gltf.scene.rotation.y = Math.PI; // 180 degrees in radians
             scene.add(gltf.scene);
+
+            // Set the camera to look at the model
+            camera.lookAt(gltf.scene.position);
+
             animate();
         }, undefined, function (error) {
             console.error(error);
